basic route work

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <h1>THIS WEEK'S PROJECT IS GONNA BE MIIIIIIIIIIIIINT</h1>
+    <main>
+        {{{ body }}}
+    </main>
 </body>
 
 </html>
