set up post sign up and added simple css styling

--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,9 +1,13 @@
+<div class="profile-div">
+  <div class="profile-image">
 <img src="/images/emilyrever.jpg" alt="image">
-<h2>Emily Rever</h2>
+</div>
+<h1>Emily Rever</h1>
 <ul>
   <li>FAC14</li>
   <li>GitHub</li>
-    <img href="https://github.com/EmilyScripts"><img src="/images/github.png"></a>
+    <a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
   </li>
 </ul>
 <textarea name="bio" cols="5" rows="5"></textarea>
+</div>
