--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,8 +1,8 @@
 
-<form action="/login" method="post">
+<!-- <form action="/login" method="post">
   <label for="name">github username</label>
   <input type="text" name="username">
   <label for="password">password</label>
   <input type="text" name="password">
   <button type="submit"></button>
-</form>
+</form> -->
