--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,9 +1,83 @@
+body {
+  background-color: #ADDBDC;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  height: 100vh;
+  margin-top: 20px;
+}
+
+main {
+  display: flex;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+
+img {
+  width: 300px;
+}
+
+header {
+  display: flex;
+}
+
 h1 {
   text-align: center;
 }
+
+form,
+label,
+input,
+button,
+textarea {
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+}
+
 form {
   display: flex;
   flex-direction: column;
   width: 60vw;
-  margin: auto;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+label {
+  font-size: 18px;
+  margin: 0 auto;
+  padding-top: 15px;
+  padding-bottom: 5px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+input{
+  font-size: 25px;
+}
+
+button {
+  color: white;
+  border: none;
+  margin-top: 25px;
+  font-size: 25px;
+  text-transform: uppercase;
+  font-weight: 400;
+  background-color: #409EA9;
+  padding: 15px;
+  cursor: pointer;
+}
+
+textarea {
+  font-size: 18px;
+  /* background: #f5f5f5; */
+}
+
+#github-icon {
+
+  height:50px;
+  width: 50px;
 }
