--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,1 +1,13 @@
-<h1>THIS WEEK'S PROJECT IS GONNA BE MIIIIIIIIIIIIINT</h1>
+
+<section>
+  <h1>This is FACr</h1>
+  <img src="/images/fac-logo.png" alt="logo">
+
+  <form action="/login" method="post">
+    <label for="name">github username</label>
+    <input type="text" name="username">
+    <label for="password">password</label>
+    <input type="text" name="password">
+    <button type="submit">Log in</button>
+  </form>
+<section>
