--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,13 +1,17 @@
-<div class="profile-div">
-  <div class="profile-image">
-<img src="/images/emilyrever.jpg" alt="image">
-</div>
-<h1>Emily Rever</h1>
-<ul>
-  <li>FAC14</li>
-  <li>GitHub</li>
-    <a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
-  </li>
-</ul>
-<textarea name="bio" cols="5" rows="5"></textarea>
-</div>
+<section>
+  <div class="profile-div">
+    <div class="profile-image">
+      <img src="/images/emilyrever.jpg" alt="image">
+    </div>
+
+    <h1>Emily Rever</h1>
+    <ul>
+      <li>FAC14</li>
+      <li>GitHub</li>
+        <a href="https://github.com/EmilyScripts"><img id="github-icon" src="/images/github.png"></a>
+      </li>
+    </ul>
+
+    <textarea name="bio" cols="5" rows="5"></textarea>
+  </div>
+</section >
