--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,17 +1,85 @@
 <section>
-  <div class="profile-div">
-    <div class="profile-image">
-      <img src="/images/emilyrever.jpg" alt="image">
+  <div id='container'>
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
     </div>
 
-    <h1>Emily Rever</h1>
-    <ul>
-      <li>FAC14</li>
-      <li>GitHub</li>
-        <a href="https://github.com/EmilyScripts"><img id="github-icon" src="/images/github.png"></a>
-      </li>
-    </ul>
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
 
-    <textarea name="bio" cols="5" rows="5"></textarea>
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
+    </div>
+
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
+    </div>
+
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
+    </div>
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
+    </div>
+    <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <textarea name="bio" cols="5" rows="5"></textarea>
+    </div>
   </div>
 </section >
