--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,8 +1,22 @@
 <section>
   <div id='container'>
-    <div class="profile-div">
-      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
 
+    <div class="profile-div">
+      <!-- add info in from data object -->
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+      <div class="textarea"><h4>bio:</h4></div>
+    </div>
+
+    <div class="profile-div">
+      <!-- add info in from data object -->
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
         <li><h4>FAC14</h4></li>
@@ -11,12 +25,12 @@
         </li>
       </ul>
 
-      <textarea name="bio" cols="5" rows="5"></textarea>
+      <div class="textarea"><h4>bio:</h4></div>
     </div>
 
     <div class="profile-div">
+      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
-
       <h3>Emily Rever</h3>
       <ul>
         <li><h4>FAC14</h4></li>
@@ -24,13 +38,12 @@
         <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
         </li>
       </ul>
-
-      <textarea name="bio" cols="5" rows="5"></textarea>
+      <div class="textarea"><h4>bio:</h4></div>
     </div>
 
     <div class="profile-div">
+      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
-
       <h3>Emily Rever</h3>
       <ul>
         <li><h4>FAC14</h4></li>
@@ -38,13 +51,12 @@
         <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
         </li>
       </ul>
-
-      <textarea name="bio" cols="5" rows="5"></textarea>
+      <div class="textarea"><h4>bio:</h4></div>
     </div>
 
     <div class="profile-div">
+      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
-
       <h3>Emily Rever</h3>
       <ul>
         <li><h4>FAC14</h4></li>
@@ -52,12 +64,12 @@
         <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
         </li>
       </ul>
-
-      <textarea name="bio" cols="5" rows="5"></textarea>
+      <div class="textarea"><h4>bio:</h4></div>
     </div>
-    <div class="profile-div">
-      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
 
+    <div class="profile-div">
+      <!-- add info in from data object -->
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
         <li><h4>FAC14</h4></li>
@@ -65,21 +77,8 @@
         <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
         </li>
       </ul>
-
-      <textarea name="bio" cols="5" rows="5"></textarea>
+      <div class="textarea"><h4>bio:</h4></div>
     </div>
-    <div class="profile-div">
-      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
 
-      <h3>Emily Rever</h3>
-      <ul>
-        <li><h4>FAC14</h4></li>
-        <li><h4>GitHub</h4></li>
-        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
-        </li>
-      </ul>
-
-      <textarea name="bio" cols="5" rows="5"></textarea>
-    </div>
   </div>
-</section >
+</section>
