--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,13 +1,13 @@
-
 <section>
   <h1>This is FACr</h1>
   <img src="/images/fac-logo.png" alt="logo">
 
   <form action="/login" method="post">
-    <label for="name">github username</label>
+    <label for="name">username</label>
     <input type="text" name="username">
     <label for="password">password</label>
     <input type="text" name="password">
     <button type="submit">Log in</button>
   </form>
-<section>
+  No account? <a href="/signup">Signup</a>
+  <section>
