--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -1,7 +1,6 @@
-
 <section>
   <h1>Sign Up</h1>
-  <form action="/signup" method="post">
+  <form action="/signup" method="post" enctype="multipart/form-data">
     <label for="user">User</label>
     <input type="text" name="user">
     <label for="firstname">First Name</label>
@@ -11,11 +10,15 @@
     <label for="password">Password</label>
     <input type="text" name="password">
     <label for="confirm-password">Confirm Password</label>
-    <input type="text" name="confirm-password">
+    <input type="text" name="confirm_password">
     <label for="github-handle">GitHub Handle</label>
-    <input type="text" name="github-handle">
+    <input type="text" name="github_handle">
+    <label for="cohort">Cohort</label>
+    <input type="text" name="cohort">
+    <label for="profile">Profile Picture</label>
+    <input type="file" name="profile">
     <label for="bio">Bio</label>
-    <textarea  name="bio"  rows="3" cols="3"></textarea>
+    <textarea name="bio" rows="3" cols="3"></textarea>
     <button type="submit">Submit</button>
   </form>
 </section>
