--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,8 +1,34 @@
 <section>
   <div id='container'>
 
+    {{#each  profiles }}
+      <div class="profile-div">
+        <img class="profile-image" src="/images/{{ this.picture }}" alt="image">
+        <h3>{{ this.username }}</h3>
+        <ul>
+          <li><h4>{{ this.cohort }}</h4></li>
+          <li><h4>{{ this.github }}</h4></li>
+          <li><a href="https://github.com/{{ this.github }}"><img class="github-icon" src="/images/github.png"></a>
+          </li>
+        </ul>
+        <div class="textarea"><h4>Bio: {{ this.bio }}</h4></div>
+      </div>
+    {{/each}}
+
+    <!-- <div class="profile-div">
+      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
+      <h3>Emily Rever</h3>
+      <ul>
+        <li><h4>FAC14</h4></li>
+        <li><h4>GitHub</h4></li>
+        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
+        </li>
+      </ul>
+
+      <div class="textarea"><h4>bio:</h4></div>
+    </div>
+
     <div class="profile-div">
-      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
@@ -15,21 +41,6 @@
     </div>
 
     <div class="profile-div">
-      <!-- add info in from data object -->
-      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
-      <h3>Emily Rever</h3>
-      <ul>
-        <li><h4>FAC14</h4></li>
-        <li><h4>GitHub</h4></li>
-        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
-        </li>
-      </ul>
-
-      <div class="textarea"><h4>bio:</h4></div>
-    </div>
-
-    <div class="profile-div">
-      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
@@ -42,7 +53,6 @@
     </div>
 
     <div class="profile-div">
-      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
@@ -55,7 +65,6 @@
     </div>
 
     <div class="profile-div">
-      <!-- add info in from data object -->
       <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
       <h3>Emily Rever</h3>
       <ul>
@@ -65,20 +74,7 @@
         </li>
       </ul>
       <div class="textarea"><h4>bio:</h4></div>
-    </div>
-
-    <div class="profile-div">
-      <!-- add info in from data object -->
-      <img class="profile-image" src="/images/emilyrever.jpg" alt="image">
-      <h3>Emily Rever</h3>
-      <ul>
-        <li><h4>FAC14</h4></li>
-        <li><h4>GitHub</h4></li>
-        <li><a href="https://github.com/EmilyScripts"><img class="github-icon" src="/images/github.png"></a>
-        </li>
-      </ul>
-      <div class="textarea"><h4>bio:</h4></div>
-    </div>
+    </div> -->
 
   </div>
 </section>
